WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276027
[JSC] exception can be thrown during exit
https://bugs.webkit.org/show_bug.cgi?id=276027
Summary
[JSC] exception can be thrown during exit
Yusuke Suzuki
Reported
2024-06-28 20:15:10 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2024-06-28 20:15:34 PDT
<
rdar://problem/130677122
>
Yusuke Suzuki
Comment 2
2024-06-28 20:19:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30298
EWS
Comment 3
2024-06-28 21:25:54 PDT
Committed
280493@main
(447672fe5051): <
https://commits.webkit.org/280493@main
> Reviewed commits have been landed. Closing PR #30298 and removing active labels.
Yusuke Suzuki
Comment 4
2024-07-23 12:58:03 PDT
***
Bug 276935
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug