Source/JavaScriptCore/runtime/ClonedArguments.cpp
@@ -40,10 +40,8 @@ ClonedArguments::ClonedArguments(VM& vm, Structure* structure, Butterfly* butter
 {
 }
 
-ClonedArguments* ClonedArguments::createEmpty(JSGlobalObject* globalObject, Structure* structure, JSFunction* callee, unsigned length, Butterfly* butterfly)
+ClonedArguments* ClonedArguments::createEmpty(VM& vm, JSGlobalObject* nullOrGlobalObjectForOOM, Structure* structure, JSFunction* callee, unsigned length, Butterfly* butterfly)
 {
-    VM& vm = globalObject->vm();
-    auto scope = DECLARE_THROW_SCOPE(vm);
     unsigned vectorLength = length;
     if (vectorLength > MAX_STORAGE_VECTOR_LENGTH)
         return nullptr;
@@ -52,7 +50,10 @@ ClonedArguments* ClonedArguments::createEmpty(JSGlobalObject* globalObject, Stru
         if (!butterfly) {
             butterfly = tryCreateArrayStorageButterfly(vm, nullptr, structure, length, vectorLength);
             if (UNLIKELY(!butterfly)) {
-                throwOutOfMemoryError(globalObject, scope);
+                if (nullOrGlobalObjectForOOM) {
+                    auto scope = DECLARE_THROW_SCOPE(vm);
+                    throwOutOfMemoryError(nullOrGlobalObjectForOOM, scope);
+                }
                 return nullptr;
             }
             butterfly->arrayStorage()->m_numValuesInVector = vectorLength;
@@ -64,7 +65,10 @@ ClonedArguments* ClonedArguments::createEmpty(JSGlobalObject* globalObject, Stru
             indexingHeader.setPublicLength(length);
             butterfly = Butterfly::tryCreate(vm, nullptr, 0, structure->outOfLineCapacity(), true, indexingHeader, vectorLength * sizeof(EncodedJSValue));
             if (UNLIKELY(!butterfly)) {
-                throwOutOfMemoryError(globalObject, scope);
+                if (nullOrGlobalObjectForOOM) {
+                    auto scope = DECLARE_THROW_SCOPE(vm);
+                    throwOutOfMemoryError(nullOrGlobalObjectForOOM, scope);
+                }
                 return nullptr;
             }
         }
@@ -97,7 +101,7 @@ ClonedArguments* ClonedArguments::createWithInlineFrame(JSGlobalObject* globalOb
     auto createEmptyWithAssert = [&](JSGlobalObject* globalObject, JSFunction* callee, unsigned length) {
         // NB. Some clients might expect that the global object of of this object is the global object
         // of the callee. We don't do this for now, but maybe we should.
-        ClonedArguments* result = ClonedArguments::createEmpty(globalObject, globalObject->clonedArgumentsStructure(), callee, length, nullptr);
+        ClonedArguments* result = ClonedArguments::createEmpty(globalObject->vm(), globalObject, globalObject->clonedArgumentsStructure(), callee, length, nullptr);
         ASSERT(!result || !result->needsSlowPutIndexing() || shouldUseSlowPut(result->structure()->indexingType()));
         return result;
     };
@@ -150,7 +154,7 @@ ClonedArguments* ClonedArguments::createWithMachineFrame(JSGlobalObject* globalO
 
 ClonedArguments* ClonedArguments::createByCopyingFrom(JSGlobalObject* globalObject, Structure* structure, Register* argumentStart, unsigned length, JSFunction* callee, Butterfly* butterfly)
 {
-    ClonedArguments* result = createEmpty(globalObject, structure, callee, length, butterfly);
+    ClonedArguments* result = createEmpty(globalObject->vm(), globalObject, structure, callee, length, butterfly);
     if (!result)
         return result;
     
